# pytodo-qt

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  todo.py
core/: Logger.py  TodoDataBase.py  TodoDatabase.py  core.py  defaults.py  json_helpers.py
crypto/: AESCipher.py
gui/: AddTodoDialog.py  MainWindow.py  SyncDialog.py  SyncProgressBar.py
net/: SyncOperations.py  TCPClientLib.py  TCPServerLib.py
src/: todo.py
src/core/: Logger.py  TodoDataBase.py  json_helpers.py  settings.py
src/crypto/: AESCipher.py
src/gui/: AddTodoDialog.py  MainWindow.py  SyncDialog.py  SyncProgressBar.py
src/net/: TCPClientLib.py  TCPServerLib.py
src/pytodo_qt/: __main__.py
src/pytodo_qt/core/: Logger.py  TodoDatabase.py  __init__.py  json_helpers.py  settings.py
src/pytodo_qt/crypto/: AESCipher.py
src/pytodo_qt/gui/: MainWindow.py
src/pytodo_qt/net/: __init__.py  sync_operations.py  tcp_client_lib.py  tcp_server_lib.py
src/todo/: __main__.py
src/todo/core/: Logger.py  TodoDataBase.py  TodoDatabase.py  __init__.py  json_helpers.py  settings.py
src/todo/crypto/: AESCipher.py
src/todo/gui/: AddTodoDialog.py  MainWindow.py  SyncDialog.py
src/todo/net/: __init__.py  tcp_client_lib.py  tcp_server_lib.py
