[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pytodo_qt = ["*.png"]
"pytodo_qt.gui.icons" = ["*.png"]

[project]
name = "pytodo-qt"
version = "0.2.7"
description = "A small cross-platform to-do application written in Python 3 and PyQt6"
readme = "README.md"
authors = [
    {name = "Michael Berry", email = "trismegustis@gmail.com"},
]
dependencies = [
    "PyQt6",
    "pycryptodomex",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
license = {text = "GPLv3"}
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/berrym/pytodo-qt"

[project.scripts]
pytodo-qt = "pytodo_qt.__main__:main"